# Icp-TaskTracker-Dapp

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/tasktredapp_backend/: Cargo.toml  tasktredapp_backend.did
src/tasktredapp_backend/src/: lib.rs
src/tasktredapp_frontend/: index.html  package.json
src/tasktredapp_frontend/src/: App.jsx  styles.css
