[package]
name = "tasktredapp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
ic-cdk-timers = "0.12"  # or the latest 0.12.x version available on crates.io
serde = { version = "1.0.219", features = ["derive"] }
